# skills4cpp

./: .gitignore  HIERARCHY_BUILD_SUMMARY.md  LICENSE  PRD.md  README.md  Task.md  custom_test_results.json  flow.md  pyproject.toml  random.txt  requirements-mac.txt  requirements.txt  requirements_dev.txt  tasks.py  test_skill_coverage.py
docs/: SENTENCE_TRANSFORMER_TESTING.md  build_hierarchy_guide.md  esco_dataset_map.md  master_datasets_guide.md
experiments/: consolidate_results.py  consolidated_results.csv  consolidated_results.json  dashboard.html
experiments/configs/: decorte_infer_pjmath.yaml  decorte_infer_pjmath_2.yaml  local_test.yaml
notebooks/: 1_eda_on_ESCO.ipynb  2_esco_skills_hierarchy.ipynb  3_esco_skills_master_datasets.ipynb  4_talent_clef_task_B_data.ipynb  5_decorte_skill_eda.ipynb  5_esco_skill_new_tree.ipynb  playdround_model.ipynb  playground_data.ipynb  sc_data.ipynb
reports/: coverage_report.txt
results/: ir_eval_results.csv  master_results.csv  master_results_new.csv  results_decorte_train_pairs_JobBERT-v2_lvl1_metrics.json  vanilla_ir_eval_results.csv
src/: config.py  data.py  evaluate.py  indexing.py  metrics.py  model.py  sanity_check.py  train.py  utils.py
src/helpers/: SkillRetrievalEvaluator.py  SkillRetrievalEvaluator_v0.py  evaluate_predictions.py  evaluate_sanity_check.py  example_model_list.txt  example_usage.py  file_based_test_results.json  (+5 more)
tests/: test_build_hierarchy.py  test_data.py  test_eval_smoke.py  test_metrics.py  test_model.py  test_skill_coverage.py  test_skills_data.py  test_utils.py
wandb/: latest-run
(+53 files in other folders)
